# kafeiche_main

./: README.md
kafeiche_control/: CMakeLists.txt  package.xml
kafeiche_control/config/: kafeiche_controllers.yaml
kafeiche_control/launch/: control.launch
kafeiche_control/src/: diffdriver_system.cpp  diffdriver_system.h
kafeiche_description/: CMakeLists.txt  package.xml
kafeiche_description/config/: joint_names_kafeiche_description.yaml
kafeiche_description/launch/: display.launch.py
kafeiche_description/meshes/: link_front_wheel_base.stl  link_left_wheel.stl  link_right_wheel.stl  link_right_wheel_base.stl
kafeiche_description/urdf/: kafeiche_base.xacro  kafeiche_front_wheel_base.xacro  kafeiche_left_wheel.xacro  kafeiche_left_wheel_base.xacro  kafeiche_materials.xacro  kafeiche_right_wheel.xacro  kafeiche_right_wheel_base.xacro
kafeiche_drivers/: CMakeLists.txt  package.xml
kafeiche_drivers/encoders/: encoder_wiring_pi.h  encoders.cpp
kafeiche_drivers/motor/: motor.cpp  motor_wiring_pi.h
src/kafeiche_ble/: CMakeLists.txt  package.xml
src/kafeiche_ble/include/kafeiche_ble/: ble_command_controller.hpp
src/kafeiche_ble/src/: ble_command_controller.cpp
src/kafeiche_description/: CMakeLists.txt  package.xml
src/kafeiche_description/config/: joint_names_kafeiche_description.yaml
src/kafeiche_description/launch/: description_light.launch.py
src/kafeiche_description/meshes/: link_front_wheel.stl  link_left_wheel_base.stl
src/kafeiche_description/urdf/: kafeiche_base.xacro  kafeiche_control.xacro  kafeiche_front_wheel.xacro  kafeiche_left_wheel.xacro  kafeiche_right_wheel.xacro
src/kafeiche_drivers/: CMakeLists.txt  diffdriver_system.xml  kafeiche_drivers.xml  package.xml  plugins.xml
src/kafeiche_drivers/config/: kafeiche_controllers.yaml
src/kafeiche_drivers/hardware/: diffdriver_system.cpp  diffdriver_system.h  encoder_wiring_pi.h  motor.cpp  stepper_motor_wiring_pi.h
src/kafeiche_drivers/include/kafeiche_drivers/: diffdriver_system.hpp  diffdriver_system_pub.hpp  diffdriver_system_sub.hpp  tricycledriver_system.hpp  tricycledriver_system_pub.hpp  tricycledriver_system_sub.hpp  tricycledriver_system_wheel.hpp  tricylcedriver_system.hpp  tricylcedriver_system_pub.hpp  tricylcedriver_system_sub.hpp  tricylcedriver_system_wheel.hpp
src/kafeiche_drivers/src/: diffdriver_system.cpp  encoder.cpp  encoder_wiring_pi.h  encoders.cpp  motor.cpp  motor_wiring_pi.h  stepper_motor_wiring_pi.h  tricycledriver_system.cpp  tricylcedriver_system.cpp
src/kafeiche_drivers/src/diffdriver/: diffdriver_system.h  diffedriver_system_wheel.h
src/kafeiche_drivers/src/include/kafeiche_drivers/: diffdriver_system.hpp  diffdriver_system_wheel.hpp
