<package format="3">
  <name>kafeiche_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for kafeiche_description</p>
    <p>This package contains configuration data, 3D models, and launch files
for kafeiche robot.</p>
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <author>TODO</author>
  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>xacro</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
