<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kafeiche_ble</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nono@gmail.com">kafeiche</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

	<depend>backward_ros</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>geometry_msgs</depend>
	<exec_depend>xacro</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
